Fix text alignment in sidebar

--- a/app/directives/sidebar/sidebar.scss
+++ b/app/directives/sidebar/sidebar.scss
@@ -50,6 +50,7 @@
     color: #5f5f5f;
     letter-spacing: 0.7px;
     margin: 10px;
+    margin-top: 50px;
     margin-bottom: 20px;
     margin-left: 25px;
 
@@ -90,7 +91,7 @@
   }
 
   .browse {
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 
     .active {
       font-weight: 500;
